--- a/index.html
+++ b/index.html
@@ -70,18 +70,18 @@
     </header>
     <nav>
         <ul>
-            <li> <a href="file:///D:/65312979/manga.html" >มังงะคืออะไร?</a></li>
-            <li> <a href= "file:///D:/65312979/Blue.html">Blue Lock</a></li>
-            <li> <a href="file:///D:/65312979/Hai.html">Haikyuu</a></li>
-            <li><a href="file:///D:/65312979/Komi.html">Komi Can't Communicate</a></li>
-            <li> <a href="file:///D:/65312979/Aka.html">Akane Banashi</a></li>
-            <li> <a href="file:///D:/65312979/Chainsaw.html">Chainsaw Man</a></li>
-            <li> <a href="file:///D:/65312979/Ab.html">About Me</a></li>
+            <li> <a href="manga.html" >มังงะคืออะไร?</a></li>
+            <li> <a href="Blue.html">Blue Lock</a></li>
+            <li> <a href="Hai.html">Haikyuu</a></li>
+            <li><a href="Komi.html">Komi Can't Communicate</a></li>
+            <li> <a href="Aka.html">Akane Banashi</a></li>
+            <li> <a href="Chainsaw.html">Chainsaw Man</a></li>
+            <li> <a href="Ab.html">About Me</a></li>
         </ul>
     </nav> 
     <div class="main-banner">
         <video autoplay muted loop id="bg-video">
-            <source src="c:\Users\Asus\Downloads\655.mp4" type="video/mp4" />
+            <source src="video/655.mp4" type="video/mp4" />
         </video>
 </body>
 </html>
