--- a/Komi.html
+++ b/Komi.html
@@ -89,12 +89,12 @@
 <body>
       <div class="header">
         <h1>Komi Can't Communicate</h1>
-        <div class="header01"><a href="file:///D:/65312979/prex.html">Home</a></div>
+        <div class="header01"><a href="prex.html">Home</a></div>
       </div>
    
         <div class="container">
         <div class="content">
-            <center><img src="c:\Users\Asus\Downloads\comic-1.jpg"></center>
+            <center><img src="im/comic-1.jpg"></center>
             
             
             <h2>Komi Can't Communicate</h2>
