--- a/Ab.html
+++ b/Ab.html
@@ -100,12 +100,12 @@
 <body>
       <div class="header">
         <h1>About Me</h1>
-        <div class="header01"><a href="file:///D:/65312979/prex.html">Home</a></div>
+        <div class="header01"><a href="prex.html">Home</a></div>
       </div>
    
         <div class="container">
         <div class="content">
-            <center><img src="c:\Users\Asus\Downloads\nu1.jpg"></center>
+            <center><img src="nu1.jpg"></center>
         
             <h2>แนะนำตัว</h2>
             <div class="message-box">
