--- a/manga.html
+++ b/manga.html
@@ -81,7 +81,7 @@
     <br><br>
     <div class="header">
         <h1>มังงะคืออะไร?</h1>
-        <div class="header01"><a href="file:///D:/65312979/prex.html">Home</a></div><br><br>
+        <div class="header01"><a href="prex.html">Home</a></div><br><br>
     </div>
 
     <div class="container">
@@ -96,9 +96,9 @@
             <p>มังงะในรูปแบบที่เราเห็นในปัจจุบันเริ่มมีความสำคัญในช่วงปลายศตวรรษที่ 19 และต้นศตวรรษที่ 20 โดยเฉพาะในช่วงหลังสงครามโลกครั้งที่ 2 ซึ่งเป็นช่วงที่มังงะเริ่มได้รับความนิยมอย่างแพร่หลาย มังงะในช่วงนี้ได้รับการพัฒนาและมีการใช้เทคนิคใหม่ๆ รวมถึงการสร้างตัวละครที่มีความหลากหลายและเนื้อเรื่องที่ซับซ้อน</p>
             <h2>การแผ่กระจายไปทั่วโลก</h2>
             <p> ตั้งแต่ช่วงปลายศตวรรษที่ 20 มังงะเริ่มได้รับความนิยมในต่างประเทศ โดยมีการแปลและเผยแพร่ในหลายประเทศ ซึ่งทำให้มังงะกลายเป็นส่วนหนึ่งของวัฒนธรรมป๊อปทั่วโลก</p>
-            <center><img src ="c:\Users\Asus\Downloads\1701301154192.jpg"></center>
+            <center><img src ="1701301154192.jpg"></center>
 
 
-            <div class="header01"><a href="file:///D:/65312979/Blue.html">Next</a></div>            
+            <div class="header01"><a href="Blue.html">Next</a></div>            
 </body>
 </html>
