--- a/Hai.html
+++ b/Hai.html
@@ -89,7 +89,7 @@
 <body>
       <div class="header">
         <h1>Haikyuu</h1>
-        <div class="header01"><a href="prex.html">Home</a></div>
+        <div class="header01"><a href="index.html">Home</a></div>
       </div>
    
         <div class="container">
