--- a/manga.html
+++ b/manga.html
@@ -81,7 +81,7 @@
     <br><br>
     <div class="header">
         <h1>มังงะคืออะไร?</h1>
-        <div class="header01"><a href="prex.html">Home</a></div><br><br>
+        <div class="header01"><a href="index.html">Home</a></div><br><br>
     </div>
 
     <div class="container">
