--- a/Aka.html
+++ b/Aka.html
@@ -90,7 +90,7 @@
 <body>
       <div class="header">
         <h1>Akane-banashie</h1>
-        <div class="header01"><a href="prex.html">Home</a></div>
+        <div class="header01"><a href="index.html">Home</a></div>
       </div>
    
         <div class="container">
