--- a/Chainsaw.html
+++ b/Chainsaw.html
@@ -80,7 +80,7 @@
 <body>
       <div class="header">
         <h1>Chainsaw Man</h1>
-        <div class="header01"><a href="prex.html">Home</a></div>
+        <div class="header01"><a href="index.html">Home</a></div>
       </div>
    
         <div class="container">
