--- a/Ab.html
+++ b/Ab.html
@@ -105,7 +105,7 @@
    
         <div class="container">
         <div class="content">
-            <center><img src="nu1.jpg"></center>
+            <center><img src="im/nu1.jpg"></center>
         
             <h2>แนะนำตัว</h2>
             <div class="message-box">
